[package]
name = "risso_actix"
version = "0.1.0"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]

[dependencies]

risso_api = { path = "../risso_api" }

# FIXME: publish diesel from risso_api to use the same version
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }

actix-web = "0.7.12"
