[package]
edition = "2018"
name = "risso_actix"
version = "0.1.0"
description = "Actix-web server front-end to risso_api, a Rust clone of the ISSO comment server"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
license = "Apache-2.0"

[dependencies]

actix = "0.7"
actix-web = "0.7"
actix-web-requestid = "0.1.2"

serde = "1.0.80"
serde_derive = "1.0.80"

failure = "0.1.3"
lazy_static ="1.1"
maplit = "1.0.1"
num-traits = "0.2"

futures = "0.1"

slog = "2.4.1"
slog-scope = "4.0.1"

prometheus = "0.4.2"

risso_api = { path = "../risso_api" }
