[package]
name = "risso_api"
version = "0.1.0"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]

[dependencies]
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tower-web = "0.2.2"

failure = "0.1"
