[package]
edition = "2018"
name = "risso_api"
version = "0.1.0"
description = "API implementation of a Rust clone of the ISSO comment server"
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
license = "Apache-2.0"

[dependencies]
# Essentials
failure = "0.1"
lazy_static = "1.2"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
maplit = "1.0"

# Logging
log = "0.4.6"
slog = "2.4.1"
env_logger = "0.5.13"
slog-term = "2.4.0"
slog-json = "2.2.0"
slog-async = "2.3.0"
slog-scope = "4.0.1"
intern = "0.2.0"

# The mighty serde and its minions
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.8"
validator_derive = "0.8"

# Async support
futures = "0.1"
tokio-threadpool = "0.1"
tokio-executor = "0.1"

# Database stuff
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
#diesel_codegen = "0.16.1"
#diesel_codegen_syntex = "0.9.0"

# Mardown & html handling
ammonia = "1.2" # HTML sanitizer
pulldown-cmark = "0.2"

# Misc
config = { version = "0.9", features = ["toml"] }
prometheus = "0.4"

sha1 = "0.6"
md5 = "0.5"

lettre = "0.8"
lettre_email = "0.8"
native-tls = "0.1"

# Later
#cache_2q = "0.10.0"
#cached = "0.8.0"

#[target.x86_64-unknown-linux-musl.dependencies]
# See https://github.com/emk/rust-musl-builder#making-diesel-work
#libsqlite3-sys = { version = "*", features = ["bundled"] }
